--- a/tema5maven/src/main/java/ejem1/Deportistas/formularioDeportistas.html
+++ b/tema5maven/src/main/java/ejem1/Deportistas/formularioDeportistas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Formulario de Deportistas</h1>
-    <form action="GestionaDeportistas.java" method="post">
+    <form action="http://localhost:8080/tema5maven/rest/deportistas/addDeportistaForm" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required><br><br>
 
